# ChaiDwarfs

./: .gitignore  CMakeLists.txt  ChaiDwarfs.sln  README.md
ChaiDwarfs/: BaseComponent.hpp  ChaiDwarfs.hpp  ChaiDwarfs.vcxproj  ChaiDwarfs.vcxproj.filters  ChaiScriptAI.hpp  ChaiScriptTypes.hpp  CommandSystem.hpp  Commands.hpp  Component.hpp  ComponentSystem.hpp  Components.cpp  Components.hpp  Datastructs.hpp  Dwarf.hpp  DwarfAI.hpp  DwarfCommand.hpp  DwarfComponentRegistrations.hpp  DwarfComponents.hpp  DwarfRoundActions.hpp  DwarfSystem.hpp  DwarfTerrainInterface.cpp  DwarfTerrainInterface.hpp  DwarfTerrainObjectInterface.cpp  DwarfTerrainObjectInterface.hpp  ECSFactory.hpp  Entity.hpp  EntityManager.hpp  GLFWInput.cpp  GLFWInput.hpp  GameStateControl.hpp  ObjectComponentRegistrations.hpp  ObjectComponents.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  RenderSystem.cpp  RenderSystem.hpp  ScreenquadRenderer.cpp  ScreenquadRenderer.hpp  ShaderBaseModel.hpp  ShaderManager.cpp  (+24 more)
ChaiDwarfs/scripts/: dwarf.chai  mapGeneration.chai  objectCreation.chai  objectDefinitions.chai
ChaiDwarfs/shader/: tileRendering_fs.glsl  tileRendering_vs.glsl
include/temp/chaiscript/utility/: FNV1A.HPP  utility.hpp
scripts/: dwarf.chai  mapGeneration.chai  objectCreation.chai  objectDefinitions.chai
shader/: tileRendering_vs.glsl
src/: BaseComponent.hpp  ChaiDwarfs.hpp  ChaiScriptAI.hpp  CommandSystem.hpp  Commands.hpp  ComponentSystem.hpp  Components.cpp  Components.hpp  DwarfAI.hpp  DwarfRoundActions.hpp  DwarfSystem.hpp  DwarfTerrainInterface.cpp  DwarfTerrainInterface.hpp  DwarfTerrainObjectInterface.cpp  DwarfTerrainObjectInterface.hpp  ECSFactory.hpp  Entity.hpp  EntityManager.hpp  GLFWInput.cpp  GLFWInput.hpp  ObjectComponentRegistrations.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  PathResolver.hpp.in  RenderSystem.cpp  RenderSystem.hpp  ScreenquadRenderer.cpp  ScreenquadRenderer.hpp  ShaderBaseModel.hpp  ShaderManager.cpp  ShaderManager.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  TerrainMap.cpp  TerrainMap.hpp  TerrainObjectSystem.cpp  TerrainObjectSystem.hpp  Texture.cpp  Texture.hpp  Texture2DArray.cpp  (+10 more)
src/cmpSystems/: ChangeTerrainTypeSys.cpp  ChangeTileTypeRenderingSys.cpp  ComponentSystem.hpp  DamageSys.cpp  DwarfAISys.cpp  KillEntitySys.cpp  MoveSpriteSys.cpp  MoveSys.cpp  PointSys.cpp  TerrainObjectSystem.cpp  TerrainObjectSystem.hpp  TouchDamageSys.cpp  TouchDestroySys.cpp  TouchHealSys.cpp  TouchValueSys.cpp
src/ecs/: BaseComponent.hpp  Components.cpp  Components.hpp  ComponentsAI.cpp  ComponentsAI.hpp  ECSFactory.hpp  Entity.hpp  EntityManager.hpp
src/interfaces/: DwarfAI.hpp  DwarfTerrainInterface.cpp  DwarfTerrainInterface.hpp  DwarfTerrainObjectInterface.cpp  DwarfTerrainObjectInterface.hpp  TerrainInterface.cpp  TerrainInterface.hpp  TerrainObjectInterface.cpp  TerrainObjectInterface.hpp
src/rendering/: OrthographicCamera.cpp  OrthographicCamera.hpp  RenderSystem.cpp  RenderSystem.hpp  ScreenquadRenderer.cpp  ScreenquadRenderer.hpp  ShaderBaseModel.hpp  ShaderManager.cpp  ShaderManager.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  Texture.cpp  Texture.hpp  Texture2D.cpp  Texture2D.hpp  Texture2DArray.cpp  Texture2DArray.hpp  TextureFactory.cpp  TextureFactory.hpp  TextureManager.cpp  TextureManager.hpp  TileRenderer.cpp  TileRenderer.hpp
src/scripts/: dwarf.chai
src/shader/: tileRendering_vs.glsl
